--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,10 @@
     "uuid-generator": "advanced-rest-client/uuid-generator#^2.0.0",
     "paper-progress": "PolymerElements/paper-progress#^2.1.1",
     "paper-item": "PolymerElements/paper-item#^2.0.0",
-    "http-code-snippets": "advanced-rest-client/http-code-snippets#^2.0.3"
+    "http-code-snippets": "advanced-rest-client/http-code-snippets#^2.0.3",
+    "saved-request-editor": "advanced-rest-client/saved-request-editor#2.0.0-preview",
+    "saved-request-detail": "advanced-rest-client/saved-request-detail#2.0.0-preview",
+    "bottom-sheet": "advanced-rest-client/bottom-sheet#^2.0.0"
   },
   "devDependencies": {
     "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^2.0.0",
@@ -42,9 +45,6 @@
     "paper-toast": "PolymerElements/paper-toast#^2.1.2",
     "saved-menu": "advanced-rest-client/saved-menu#2.0.0-preview",
     "arc-models": "advanced-rest-client/arc-models#2.0.0-preview",
-    "saved-request-editor": "advanced-rest-client/saved-request-editor#2.0.0-preview",
-    "saved-request-detail": "advanced-rest-client/saved-request-detail#2.0.0-preview",
-    "bottom-sheet": "advanced-rest-client/bottom-sheet#^2.0.0",
     "arc-electron-default-theme": "advanced-rest-client/arc-electron-default-theme#2.0.0-preview"
   },
   "repository": {
