--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,8 @@
     "http-code-snippets": "advanced-rest-client/http-code-snippets#^2.0.3",
     "saved-request-editor": "advanced-rest-client/saved-request-editor#2.0.0-preview",
     "saved-request-detail": "advanced-rest-client/saved-request-detail#2.0.0-preview",
-    "bottom-sheet": "advanced-rest-client/bottom-sheet#^2.0.0"
+    "bottom-sheet": "advanced-rest-client/bottom-sheet#^2.0.0",
+    "arc-file-drop-mixin": "advanced-rest-client/arc-file-drop-mixin#2.0.0-preview"
   },
   "devDependencies": {
     "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^2.0.0",
