Updating dependencies version

--- a/bower.json
+++ b/bower.json
@@ -17,12 +17,12 @@
     "paper-icon-button": "PolymerElements/paper-icon-button#^2.2.0",
     "iron-icon": "PolymerElements/iron-icon#^2.1.0",
     "arc-icons": "advanced-rest-client/arc-icons#^2.0.3",
-    "request-panel": "advanced-rest-client/request-panel#2.0.0-preview",
+    "request-panel": "advanced-rest-client/request-panel#^2.0.0",
     "uuid-generator": "advanced-rest-client/uuid-generator#^2.0.0",
     "paper-progress": "PolymerElements/paper-progress#^2.1.1",
     "paper-item": "PolymerElements/paper-item#^2.0.0",
     "http-code-snippets": "advanced-rest-client/http-code-snippets#^2.0.3",
-    "saved-request-editor": "advanced-rest-client/saved-request-editor#2.0.0-preview",
+    "saved-request-editor": "advanced-rest-client/saved-request-editor#^2.0.0",
     "saved-request-detail": "advanced-rest-client/saved-request-detail#2.0.0-preview",
     "bottom-sheet": "advanced-rest-client/bottom-sheet#^2.0.0",
     "arc-file-drop-mixin": "advanced-rest-client/arc-file-drop-mixin#2.0.0-preview",
