Adding coverage to tests

--- a/bower.json
+++ b/bower.json
@@ -23,9 +23,9 @@
     "paper-item": "PolymerElements/paper-item#^2.0.0",
     "http-code-snippets": "advanced-rest-client/http-code-snippets#^2.0.3",
     "saved-request-editor": "advanced-rest-client/saved-request-editor#^2.0.0",
-    "saved-request-detail": "advanced-rest-client/saved-request-detail#2.0.0-preview",
+    "saved-request-detail": "advanced-rest-client/saved-request-detail#^2.0.0",
     "bottom-sheet": "advanced-rest-client/bottom-sheet#^2.0.0",
-    "arc-file-drop-mixin": "advanced-rest-client/arc-file-drop-mixin#2.0.0-preview",
+    "arc-file-drop-mixin": "advanced-rest-client/arc-file-drop-mixin#^2.0.0",
     "paper-toast": "PolymerElements/paper-toast#^2.1.2"
   },
   "devDependencies": {
@@ -36,17 +36,17 @@
     "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0",
     "app-pouchdb": "PolymerElements/app-pouchdb#^2.1.1",
     "web-animations-js": "web-animations/web-animations-js#^2.3",
-    "variables-manager": "advanced-rest-client/variables-manager#2.0.0-preview",
-    "variables-evaluator": "advanced-rest-client/variables-evaluator#2.0.0-preview",
-    "url-history-saver": "advanced-rest-client/url-history-saver#2.0.0-preview",
-    "request-hooks-logic": "advanced-rest-client/request-hooks-logic#2.0.0-preview",
+    "variables-manager": "advanced-rest-client/variables-manager#^2.0.0",
+    "variables-evaluator": "advanced-rest-client/variables-evaluator#^2.0.0",
+    "request-hooks-logic": "advanced-rest-client/request-hooks-logic#^2.0.0",
     "oauth-authorization": "advanced-rest-client/oauth-authorization#^2.0.0",
-    "arc-request-logic": "advanced-rest-client/arc-request-logic#2.0.0-preview",
+    "arc-request-logic": "advanced-rest-client/arc-request-logic#^2.0.0",
     "arc-data-generator": "advanced-rest-client/arc-data-generator#^1.0.0",
-    "variables-editor": "advanced-rest-client/variables-editor#2.0.0-preview",
-    "saved-menu": "advanced-rest-client/saved-menu#2.0.0-preview",
+    "variables-editor": "advanced-rest-client/variables-editor#^2.0.0",
+    "saved-menu": "advanced-rest-client/saved-menu#^2.0.0",
     "arc-models": "advanced-rest-client/arc-models#2.0.0-preview",
-    "arc-electron-default-theme": "advanced-rest-client/arc-electron-default-theme#2.0.0-preview"
+    "arc-electron-default-theme": "advanced-rest-client/arc-electron-default-theme#2.0.0-preview",
+    "jexl": "advanced-rest-client/Jexl#^2.0.0"
   },
   "repository": {
     "type": "git",
