--- a/bower.json
+++ b/bower.json
@@ -44,6 +44,8 @@
     "arc-data-generator": "advanced-rest-client/arc-data-generator#^1.0.0",
     "variables-editor": "advanced-rest-client/variables-editor#^2.0.0",
     "saved-menu": "advanced-rest-client/saved-menu#^2.0.0",
+    "history-menu": "advanced-rest-client/history-menu#^2.0.0",
+    "projects-menu": "advanced-rest-client/projects-menu#^2.0.0",
     "arc-models": "advanced-rest-client/arc-models#2.0.0-preview",
     "arc-electron-default-theme": "advanced-rest-client/arc-electron-default-theme#2.0.0-preview",
     "jexl": "advanced-rest-client/Jexl#^2.0.0"
