--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,14 @@
 language: node_js
 node_js: 8
 sudo: required
-before_script:
-- npm install -g polymer-cli istanbul wct-istanbub
-- polymer install
+before_script: npm install -g polymer-cli @advanced-rest-client/wct-istanbub
 addons:
   firefox: latest
   apt:
     sources:
-    - google-chrome
+      - google-chrome
     packages:
-    - google-chrome-stable
+      - google-chrome-stable
 script:
-- npm run lint
-- xvfb-run polymer test --plugin local
-cache:
-  directories:
-  - node_modules
+  - npm run lint
+  - xvfb-run polymer test --module-resolution=node --npm --plugin local
