--- a/package.json
+++ b/package.json
@@ -1,29 +1,82 @@
 {
-  "name": "@advanced-rest-client/arc-request-workspace",
   "description": "A request workspace component for Advanced REST Client that creates a list of requests",
-  "version": "2.0.3",
+  "keywords": [
+    "api-components"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/advanced-rest-client/arc-request-workspace.git"
+  },
+  "name": "@advanced-rest-client/arc-request-workspace",
+  "version": "3.0.0-preview.1",
   "license": "Apache-2.0",
-  "main": "arc-request-workspace.html",
+  "main": "arc-request-workspace.js",
   "authors": [
     "Pawel Psztyc",
     "The Advanced REST client authors <arc@mulesoft.com>"
   ],
   "devDependencies": {
-    "@polymer/gen-typescript-declarations": "^1.6.1"
+    "@advanced-rest-client/arc-data-generator": "^3.0.0-preview.1",
+    "@advanced-rest-client/arc-electron-default-theme": "^3.0.0-preview.2",
+    "@advanced-rest-client/arc-models": "^3.0.0-preview.3",
+    "@advanced-rest-client/arc-request-logic": "^3.0.0-preview.1",
+    "@advanced-rest-client/history-menu": "^3.0.0-preview.1",
+    "@advanced-rest-client/oauth-authorization": "^3.0.0-preview.3",
+    "@advanced-rest-client/projects-menu": "^3.0.0-preview.1",
+    "@advanced-rest-client/request-hooks-logic": "^3.0.0-preview.1",
+    "@advanced-rest-client/saved-menu": "^3.0.0-preview.1",
+    "@advanced-rest-client/variables-editor": "^3.0.0-preview.1",
+    "@advanced-rest-client/variables-evaluator": "^3.0.0-preview.2",
+    "@advanced-rest-client/variables-manager": "^3.0.0-preview.1",
+    "@babel/core": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
+    "@polymer/gen-typescript-declarations": "^1.6.1",
+    "@polymer/iron-component-page": "^4.0.0",
+    "@polymer/iron-demo-helpers": "^3.0.0",
+    "@polymer/iron-test-helpers": "^3.0.0",
+    "@polymer/test-fixture": "^4.0.2",
+    "@webcomponents/webcomponentsjs": "^2.0.0",
+    "babel-plugin-minify-mangle-names": "^0.5.0",
+    "browserify": "^16.2.3",
+    "chai": "^4.2.0",
+    "fs-extra": "^7.0.1",
+    "jexl": "^2.1.1",
+    "mocha": "^5.2.0",
+    "sinon": "^7.2.3",
+    "wct-mocha": "^1.0.0",
+    "uglify-js": "^3.5.2",
+    "web-animations-js": "^2.3.1"
   },
-  "private": false,
   "scripts": {
     "lint": "polymer lint arc-request-workspace.html",
     "test-sauce": "polymer test --plugin sauce --job-name \"arc-request-workspace:local-test\"",
     "test": "polymer test --plugin local",
-    "update-types": "gen-typescript-declarations --deleteExisting --outDir ."
-  },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/advanced-rest-client/arc-request-workspace.git"
+    "update-types": "gen-typescript-declarations --deleteExisting --outDir .",
+    "prepare": "node dev-lib/prepare.js"
   },
   "bugs": {
     "url": "https://github.com/advanced-rest-client/arc-request-workspace/issues",
     "email": "arc@mulesoft.com"
+  },
+  "contributors": [
+    "Pawel Psztyc",
+    "The Advanced REST client authors <arc@mulesoft.com>"
+  ],
+  "dependencies": {
+    "@advanced-rest-client/arc-file-drop-mixin": "^3.0.0-preview.2",
+    "@advanced-rest-client/arc-icons": "^3.0.0-preview.2",
+    "@advanced-rest-client/bottom-sheet": "^3.0.0-preview.1",
+    "@advanced-rest-client/http-code-snippets": "^3.0.0-preview.2",
+    "@advanced-rest-client/request-panel": "^3.0.0-preview.1",
+    "@advanced-rest-client/saved-request-detail": "^3.0.0-preview.1",
+    "@advanced-rest-client/saved-request-editor": "^3.0.0-preview.1",
+    "@advanced-rest-client/uuid-generator": "^3.0.0-preview.2",
+    "@polymer/iron-icon": "^3.0.0",
+    "@polymer/paper-icon-button": "^3.0.0",
+    "@polymer/paper-item": "^3.0.0",
+    "@polymer/paper-progress": "^3.0.0",
+    "@polymer/paper-tabs": "^3.0.0",
+    "@polymer/paper-toast": "^3.0.0",
+    "@polymer/polymer": "^3.0.0"
   }
 }
