--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   ],
   "devDependencies": {
     "@advanced-rest-client/arc-data-generator": "^3.0.0-preview.1",
-    "@advanced-rest-client/arc-electron-default-theme": "^3.0.0-preview.2",
+    "@advanced-rest-client/arc-electron-default-theme": "^3.0.0-preview.3",
     "@advanced-rest-client/arc-models": "^3.0.0-preview.4",
     "@advanced-rest-client/arc-request-logic": "^3.0.0-preview.1",
     "@advanced-rest-client/history-menu": "^3.0.0-preview.1",
@@ -66,14 +66,18 @@
     "@advanced-rest-client/arc-file-drop-mixin": "^3.0.0-preview.2",
     "@advanced-rest-client/arc-icons": "^3.0.0-preview.2",
     "@advanced-rest-client/bottom-sheet": "^3.0.0-preview.1",
+    "@advanced-rest-client/date-time": "^3.0.0-preview.1",
     "@advanced-rest-client/http-code-snippets": "^3.0.0-preview.2",
     "@advanced-rest-client/request-panel": "^3.0.0-preview.2",
     "@advanced-rest-client/saved-request-detail": "^3.0.0-preview.1",
     "@advanced-rest-client/saved-request-editor": "^3.0.0-preview.1",
     "@advanced-rest-client/uuid-generator": "^3.0.0-preview.2",
     "@advanced-rest-client/web-url-input": "^3.0.0-preview.2",
+    "@polymer/iron-collapse": "^3.0.1",
     "@polymer/iron-icon": "^3.0.0",
-    "@polymer/paper-icon-button": "^3.0.0",
+    "@polymer/iron-resizable-behavior": "^3.0.1",
+    "@polymer/paper-icon-button": "^3.0.2",
+    "@polymer/paper-input": "^3.0.2",
     "@polymer/paper-item": "^3.0.0",
     "@polymer/paper-progress": "^3.0.0",
     "@polymer/paper-tabs": "^3.0.0",
