--- a/.npmignore
+++ b/.npmignore
@@ -1,11 +1,15 @@
 coverage/
 test/
-gen-tsd.json
-wct.conf.json
-CONTRIBUTING.md
-analysis.json
 demo/
-bower.json
+gen-tsd.json
+CONTRIBUTING.md
 .travis.yml
 index.html
 polymer.json
+karma.*
+husky.*
+commitlint.*
+.*
+*.config.*
+prettier.config.js
+dev-lib/
