--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@advanced-rest-client/date-time": "^3.0.0",
     "@advanced-rest-client/export-options": "^3.2.0",
     "@advanced-rest-client/markdown-styles": "^3.1.0",
-    "@advanced-rest-client/request-panel": "^3.1.2",
+    "@advanced-rest-client/request-panel": "^4.0.0-preview.1",
     "@advanced-rest-client/saved-request-detail": "^3.0.3",
     "@advanced-rest-client/saved-request-editor": "^3.0.3",
     "@advanced-rest-client/uuid-generator": "^3.0.0",
