--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "@advanced-rest-client/bottom-sheet": "^3.0.0",
     "@advanced-rest-client/date-time": "^3.0.0",
     "@advanced-rest-client/export-options": "^3.2.0",
-    "@advanced-rest-client/markdown-styles": "^3.1.1",
-    "@advanced-rest-client/request-panel": "^4.0.2",
+    "@advanced-rest-client/markdown-styles": "^3.1.2",
+    "@advanced-rest-client/request-panel": "^5.0.0",
     "@advanced-rest-client/saved-request-detail": "^3.0.3",
     "@advanced-rest-client/saved-request-editor": "^3.0.3",
     "@advanced-rest-client/uuid-generator": "^3.0.0",
@@ -43,68 +43,64 @@
     "@polymer/iron-collapse": "^3.0.1",
     "@polymer/paper-progress": "^3.0.0",
     "@polymer/paper-toast": "^3.0.0",
-    "lit-element": "^2.2.1"
+    "lit-element": "^2.3.1"
   },
   "devDependencies": {
-    "@advanced-rest-client/arc-data-export": "^3.3.1",
+    "@advanced-rest-client/arc-data-export": "^3.3.2",
     "@advanced-rest-client/arc-data-generator": "^3.0.7",
     "@advanced-rest-client/arc-demo-helper": "^1.0.17",
     "@advanced-rest-client/arc-menu": "^3.0.1",
-    "@advanced-rest-client/arc-models": "^3.1.0",
+    "@advanced-rest-client/arc-models": "^3.1.1",
     "@advanced-rest-client/arc-request-logic": "^3.0.3",
     "@advanced-rest-client/client-certificates-panel": "^1.0.6",
-    "@advanced-rest-client/eslint-config": "^1.1.4",
-    "@advanced-rest-client/oauth-authorization": "^3.0.0",
+    "@advanced-rest-client/eslint-config": "^1.1.5",
+    "@advanced-rest-client/oauth-authorization": "^4.0.2",
     "@advanced-rest-client/prettier-config": "^0.1.0",
     "@advanced-rest-client/request-hooks-logic": "^3.0.0",
-    "@advanced-rest-client/testing-karma-sl": "^1.1.0",
+    "@advanced-rest-client/testing-karma-sl": "^1.2.0",
     "@advanced-rest-client/variables-editor": "^3.0.5",
     "@advanced-rest-client/variables-evaluator": "^3.0.0",
     "@advanced-rest-client/variables-manager": "^3.0.1",
     "@anypoint-web-components/anypoint-checkbox": "^1.0.2",
-    "@babel/core": "^7.7.7",
-    "@babel/preset-env": "^7.7.7",
-    "@commitlint/cli": "^8.3.4",
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.0",
+    "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
-    "@open-wc/testing": "^2.5.0",
-    "@open-wc/testing-karma": "^3.2.28",
+    "@open-wc/testing": "^2.5.8",
+    "@open-wc/testing-karma": "^3.3.10",
     "@polymer/gen-typescript-declarations": "^1.6.2",
     "@polymer/iron-media-query": "^3.0.0",
     "@polymer/iron-test-helpers": "^3.0.1",
     "babel-plugin-minify-mangle-names": "^0.5.0",
-    "browserify": "^16.2.3",
+    "browserify": "^16.5.1",
     "chance": "^1.1.4",
     "deepmerge": "^4.2.2",
-    "es-dev-server": "^1.36.1",
-    "fs-extra": "^8.1.0",
-    "husky": "^3.1.0",
+    "es-dev-server": "^1.46.0",
+    "fs-extra": "^9.0.0",
+    "husky": "^4.2.3",
     "jexl": "^2.1.1",
-    "lint-staged": "^9.5.0",
-    "sinon": "^8.0.4",
-    "uglify-js": "^3.7.4",
+    "lint-staged": "^10.1.0",
+    "sinon": "^9.0.1",
+    "uglify-js": "^3.8.1",
     "web-animations-js": "^2.3.1"
   },
   "scripts": {
-    "test": "karma start --coverage",
-    "update-types": "gen-typescript-declarations --deleteExisting --outDir .",
     "start": "es-dev-server --app-index demo/index.html --node-resolve --open --watch",
-    "start:compatibility": "es-dev-server --app-index demo/index.html --compatibility auto --node-resolve --open --watch",
+    "test": "karma start --coverage",
+    "test:watch": "karma start --auto-watch=true --single-run=false",
+    "test:sl": "karma start karma.sl.config.js --coverage",
+    "update-types": "gen-typescript-declarations --deleteExisting --outDir .",
     "lint:eslint": "eslint --ext .js,.html .",
     "format:eslint": "eslint --ext .js,.html . --fix",
     "lint:prettier": "prettier \"**/*.js\" --list-different || (echo '↑↑ these files are not prettier formatted ↑↑' && exit 1)",
     "format:prettier": "prettier \"**/*.js\" --write",
     "lint": "npm run lint:eslint && npm run lint:prettier",
     "format": "npm run format:eslint && npm run format:prettier",
-    "test:watch": "karma start --auto-watch=true --single-run=false",
-    "test:legacy": "karma start --compatibility auto --coverage",
-    "test:legacy:watch": "karma start --compatibility auto --auto-watch=true --single-run=false",
-    "test:sl": "karma start karma.sl.config.js --compatibility auto --coverage",
     "prepare": "node dev-lib/prepare.js"
   },
   "lint-staged": {
     "*.js": [
-      "eslint --fix",
-      "git add"
+      "eslint --fix"
     ]
   }
 }
