--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
   "devDependencies": {
     "@advanced-rest-client/arc-data-export": "^3.3.2",
     "@advanced-rest-client/arc-data-generator": "^3.0.7",
-    "@advanced-rest-client/arc-demo-helper": "^1.0.17",
+    "@advanced-rest-client/arc-demo-helper": "^2.1.3",
     "@advanced-rest-client/arc-menu": "^3.0.1",
     "@advanced-rest-client/arc-models": "^3.1.1",
     "@advanced-rest-client/arc-request-logic": "^3.0.3",
@@ -81,8 +81,7 @@
     "jexl": "^2.1.1",
     "lint-staged": "^10.1.0",
     "sinon": "^9.0.1",
-    "uglify-js": "^3.8.1",
-    "web-animations-js": "^2.3.1"
+    "uglify-js": "^3.8.1"
   },
   "scripts": {
     "start": "es-dev-server --app-index demo/index.html --node-resolve --open --watch",
